2002-06-04  Seth Nickell  <snickell@stanford.edu>

	* gnome-window-manager.c: (gnome_window_manager_get_ditem):
	* gnome-window-manager.h:
	* gnome-wm-manager.c: (gnome_wm_manager_set_current),
	(gnome_wm_manager_get_current), (gnome_wm_manager_same_wm):
	* gnome-wm-manager.h:

	Clean the APIs a little bit, add a mechanism for discovering if two GnomeWindowManager *s are
	the same Window Manager underneath.
	
2002-06-03  Kjartan Maraas  <kmaraas@gnome.org>

	* .cvsignore: Add newline
	* gnome-wm-manager.c: Added #include <config.h>
	
2002-06-02  Seth Nickell  <snickell@stanford.edu>

	* .cvsignore:

	Update to deal with the .pc file that gets generated.
	
	* Makefile.am:

	Build a real library, not just a non-installed. This is to get around
	problems dealing with GObject inheritance and static memory problems. We
	have a run time loaded object deriving from the library, so it has to link it in. But then
	the problem that occurs is that both the run-time loaded library and the
	program that calls it statically link the .la in. Then they have different
	memory spaces, and type registration goes to pot. Open to suggestions if there's
	a way of doing this without making an installed library.
	
	* gnome-window-manager.c: (gnome_window_manager_new),
	(gnome_window_manager_get_name), (gnome_window_manager_set_theme),
	(gnome_window_manager_get_theme_list),
	(gnome_window_manager_set_font),
	(gnome_window_manager_get_focus_follows_mouse),
	(gnome_window_manager_set_focus_follows_mouse),
	(gnome_window_manager_init), (gnome_window_manager_finalize),
	(gnome_window_manager_class_init), (gnome_window_manager_get_type):
	* gnome-window-manager.h:

	Lots of formatting fixes, change some of the boilerplate.

	* gnome-window-settings-2.0.pc.in:

	Since we're installing a library, go the whole way. Its good to make this
	easy to depend on for external window managers anyway, now that I think
	of it.
	
	* gnome-wm-manager.c: (gnome_wm_manager_init),