@@ -30,7 +30,7 @@ gnome_window_manager_new (GnomeDesktopItem *item)
     return NULL;
   }
 
-  success = g_module_symbol (module, "metacity_window_manager_get_type",
+  success = g_module_symbol (module, "window_manager_new",
 			     (gpointer *) &wm_new_func);  
   
   if ((!success) || wm_new_func == NULL) {
@@ -38,7 +38,7 @@ gnome_window_manager_new (GnomeDesktopItem *item)
     return NULL;
   }
 
-  wm = g_object_new ((wm_new_func) (), NULL);
+  wm = (wm_new_func) ();
 
   (GNOME_WINDOW_MANAGER (wm))->p->window_manager_name = g_strdup (gnome_desktop_item_get_string (item, GNOME_DESKTOP_ITEM_NAME));
   (GNOME_WINDOW_MANAGER (wm))->p->ditem = gnome_desktop_item_ref (item);
@@ -77,13 +77,6 @@ gnome_window_manager_set_font (GnomeWindowManager *wm, const char *font)
 {
   GnomeWindowManagerClass *klass = GNOME_WINDOW_MANAGER_GET_CLASS (wm);
   klass->set_font (font);
-}
-
-gboolean     
-gnome_window_manager_get_focus_follows_mouse (GnomeWindowManager *wm)
-{
-  GnomeWindowManagerClass *klass = GNOME_WINDOW_MANAGER_GET_CLASS (wm);
-  return klass->get_focus_follows_mouse ();
 }
 
 void         
@@ -129,7 +122,6 @@ gnome_window_manager_class_init (GnomeWindowManagerClass *class)
 	wm_class->set_theme               = NULL;
 	wm_class->get_theme_list          = NULL;
 	wm_class->set_font                = NULL;
-	wm_class->get_focus_follows_mouse = NULL;
 	wm_class->set_focus_follows_mouse = NULL;
 
 	parent_class = g_type_class_peek_parent (class);
@@ -139,8 +131,6 @@ GType
 gnome_window_manager_get_type (void)
 {
 	static GType gnome_window_manager_type = 0;
-
-	printf ("getting called...\n");
 
 	if (!gnome_window_manager_type) {
 		static GTypeInfo gnome_window_manager_info = {
@@ -161,8 +151,6 @@ gnome_window_manager_get_type (void)
 						"GWindowManager",
 						&gnome_window_manager_info, 0);
 	}
-
-	printf ("done\n");
 
 	return gnome_window_manager_type;
 }
